add voter and candidate effects

--- a/src/app/modules/candidates/candidates.component.html
+++ b/src/app/modules/candidates/candidates.component.html
@@ -26,6 +26,11 @@
           {{ candidate.votes }}
         </td>
       </tr>
+      <tr *ngIf="addingNew$ | async" >
+        <td [attr.colspan]="2" class="text-center">
+          Adding new candidate...
+        </td>
+      </tr>
     </tbody>
   </table>
 </ng-template>
